--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,8 +54,8 @@ jobs:
             - node_modules
 
       # prepare the database
-      - run: touch storage/testing.sqlite
-      - run: php artisan migrate --env=testing --database=sqlite_testing --force
+      - run: touch storage/laravel
+      - run: php artisan migrate --env=testing --database=laravel --force
 
       # run tests with phpunit or codecept
       #- run: ./vendor/bin/phpunit
